--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 #portfolio, #skills, #education, #about, #contact, #experience, #blog {
-  width: 80%;
+  width: 90%;
   margin: 100px auto;
 }
 
@@ -11,12 +11,16 @@ header {
   margin: -100px 0 0 0;
 }
 
-h2 {
-  color: #6200ee;
+#about a {
+  color: #6200ee !important;
 }
 
-.accent {
-  color: #6200ee;
+h2, .accent {
+  color: #6200ee !important;
+}
+
+h3 {
+  text-align: left;
 }
 
 .accent-bg {
@@ -26,6 +30,10 @@ h2 {
 nav.navbar {
   background: #6200ee !important;
   list-style-type: none;
+}
+
+#collapse-nav {
+  justify-content: space-between;
 }
 
 .nav-link {
@@ -74,15 +82,42 @@ nav.navbar {
   width: 100%;
 }
 
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%236200ee' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
-  color: black;
+/*
+Swiper
+*/
+
+.swiper-slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%236200ee' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-  color: black;
+.swiper-slide > * {
+  align-self: center;
 }
+
+.swiper-pagination-bullet-active {
+  background-color: #6200ee !important;
+}
+
+.swiper-button-prev {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%236200ee'%2F%3E%3C%2Fsvg%3E") !important;;
+
+}
+
+.swiper-button-next {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%236200ee'%2F%3E%3C%2Fsvg%3E") !important;
+}
+
+/*.carousel-control-next-icon {*/
+/*background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%236200ee' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;*/
+/*color: black;*/
+/*}*/
+
+/*.carousel-control-prev-icon {*/
+/*background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%236200ee' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;*/
+/*color: black;*/
+/*}*/
 
 .mdc-card {
   text-align: left;
@@ -91,4 +126,122 @@ nav.navbar {
 .mdc-card__supporting-text {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
+}
+
+
+/*
+MDC Dialog
+*/
+
+.mdc-dialog__surface {
+  max-height: 85vh !important;
+}
+
+.mdc-dialog__body {
+  overflow-y: scroll;
+}
+
+.mdc-card-primary-action {
+  max-height: 200px;
+}
+
+.steps-wrapper {
+  margin: 10px 0;
+
+}
+
+.step-header {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.step-title {
+  padding-left: 24px;
+}
+
+.step-detail.row {
+  text-align: left;
+  margin-left: 23px;
+  border-left: 1px solid gray;
+  padding-left: 48px;
+}
+
+.steps-wrapper {
+  margin: 10px 0;
+
+}
+
+.step-header {
+  align-items: center;
+  padding: 10px 0;
+}
+
+svg {
+  fill: currentColor;
+  width: 48px;
+  height: 48px;
+  display: block;
+  font-size: 24px;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  user-select: none;
+  flex-shrink: 0;
+}
+
+svg text {
+  fill: #fff;
+  font-size: 16px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+
+circle {
+  fill: currentColor;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  font-size: 24px;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  user-select: none;
+  flex-shrink: 0;
+}
+
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+}
+
+
+@media (max-width: 767px) {
+  .swiper-container {
+    margin-bottom: 40px !important;
+  }
+
+  .swiper-pagination {
+    bottom: -18px !important;
+  }
+}
+
+/* Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+  #portfolio, #skills, #education, #about, #contact, #experience, #blog {
+    width: 80%;
+  }
+
+  .nav-link {
+    flex-direction: column;
+  }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+  .nav-link {
+    flex-direction: row;
+  }
+}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
 }
